添加响应数据封装类